--- a/bpd.cfg
+++ b/bpd.cfg
@@ -1,12 +1,12 @@
 [project]
-name: lodges
+name: @@project
 language: cq
 version: 1.0.0
 coverage-threshold: 0
 
 
 [artifacts]
-web:    artifact=lodges-all
+web:    artifact=@@project-all
         group=com.nationalgeographic.sites.travel
 
 [artifact-mapping]
@@ -19,10 +19,10 @@ migrations: publish,author
 platform:   artifact=platform-all
             group=com.nationalgeographic.cq
             version=1.6.1-282
-migrations: artifact=lodges-migrations
+migrations: artifact=@@project-migrations
             group=com.nationalgeographic.sites.travel
             version=0.0.0-1
-automationcontent: artifact=lodges-automationcontent
+automationcontent: artifact=@@project-automationcontent
             group=com.nationalgeographic.sites.travel
             context=ci
             version=0.0.0-1
